# LyNexus

./: .gitignore  .gitignore_pyinstaller  API_MIGRATION.md  BUILD_INSTRUCTIONS.md  CONFIG_HARDCODE_REMOVAL.md  DATA_STRUCTURE.md  HARDCODED_PROMPTS_REMOVAL.md  MARKDOWN_RENDERING.md  None  README.html  README.md  README_API.md  README_zh_cn.md  SYSTEM_PROMPT_FLOW.md  TOOL_DESCRIPTION_READING_PROMPT.md  add_workflow.py  aiclass.py  api_server.py  api_server_test.py  app_config.json  build-windows.bat  build_exe.py  default_config.json  default_prompts.json  install_markdown.bat  main.py  prefab_file_operator.json  pyproject.toml  requirements-api.txt  requirements.txt  start.bat  start.py  start_dev.py  test_auto_sync.py  test_chat_data_structure.py  test_markdown_render.py
.claude/: settings.local.json
ai_conv/: 1_ai.json  filre_operator_ai.json  new_ai.json
config/: i18n.py
docs/: README.md  WEBUI_SEND_FLOW.md
docs/zh-cn/: README.md
tools/: files.py  mcp_config.json  mcp_config_loader.py  network.py  ocr.py  osmanager.py
ui/: chat_box.py  init_dialog.py  mcp_tools_widget.py  settings_dialog.py  splash_screen.py
utils/: ai_history_manager.py  chat_data_manager.py  config_manager.py  conversation_config.py  markdown_renderer.py
webui/: .env.example  .gitignore  .npmrc  README.md  electron-builder.toml  fix-imports.cjs  fix-ts-errors.cjs  index.html  install.bat  install.sh  package-lock.json  package.json  run_electron_from_source.bat  tailwind.config.js  tsconfig.json  vite.config.ts
webui/electron/: main.ts  preload.ts
webui/src/: App.tsx  index.css  (+2 more)
(+24 files in other folders)
