[project]
name = "deepseekdesktop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "nuitka>=2.8.9",
    "openai>=2.14.0",
    "pyinstaller>=6.18.0",
    "pyside6>=6.10.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sse-starlette>=3.2.0",
    "uvicorn>=0.40.0",
    "zstandard>=0.25.0",
]
